<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyEvents</string>

    <string name="empty_text_field">Требуется заполнить</string>

    <string name="title_events_list">События</string>
    <string name="title_event_details">Детали События</string>
    <string name="title_add_event">Новое Событие</string>
    <string name="title_groups">Все Группы</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_settings">Настройки</string>

    <string name="notification_title">Предстоящие события</string>
    <string name="notification_text_month">Через месяц:</string>
    <string name="notification_text_week">Через неделю:</string>
    <string name="notification_text_two_day">Через 2 дня:</string>
    <string name="notification_text_day">Завтра:</string>
    <string name="notification_text_today">Сегодня:</string>

    <string name="events_list_empty">Создайте новое событие</string>

    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="apply">Принять</string>
    <string name="birthday_date">День рождения %s</string>
    <string name="birthday">День рождения</string>
    <string name="anniversary_date">Годовщина %s</string>
    <string name="anniversary">Годовщина</string>
    <string name="fields_empty">Необходимо заполнить имя и дату</string>
    <string name="alarm_managers_restarted">Ежедневные уведомления и обновления событий перезапущены!</string>
    <string name="event_saved">Дата сохранена!</string>
    <string name="dialog_delete_event">Удалить это событие?</string>
    <string name="export_success">События экспортированы успешно!</string>
    <string name="export_failure">Ошибка во время экспорта</string>
    <string name="import_success">События импортированы успешно!</string>
    <string name="import_failure">Ошибка во время импорта</string>
    <string name="import_alert">Импорт дат удалит все существующие записи и создаст новые из выбранного файла. Продолжить?</string>
    <string name="time_hour_minute">%d:%d</string>
    <string name="time_hour_minute_sub">%d:0%d</string>
    <plurals name="age">
        <item quantity="one">(%d год)</item>
        <item quantity="few">(%d года)</item>
        <item quantity="many">(%d лет)</item>
        <item quantity="other">Error</item>
    </plurals>
    <plurals name="days_left">
        <item quantity="one">Через %d день</item>
        <item quantity="few">Через %d дня</item>
        <item quantity="many">Через %d дней</item>
        <item quantity="other">Ошибка</item>
    </plurals>

    <string name="menu_title_search">Search</string>
    <string name="menu_title_settings">Settings</string>

    <string name="add_event_text_new_event">Новое событие</string>
    <string name="add_event_text_choose">Выберите тип события</string>
    <string name="add_event_text_birthday">День рождения</string>
    <string name="add_event_text_anniversary">Годовщина</string>
    <string name="add_event_text_name">Имя</string>
    <string name="add_event_hint_name">Введите имя</string>
    <string name="add_event_text_lastname">Фамилия</string>
    <string name="add_event_hint_lastname">Введите фамилию</string>
    <string name="add_event_text_middle_name">Отчество</string>
    <string name="add_event_hint_middle_name">Введите отчество</string>
    <string name="add_event_text_date">Дата</string>
    <string name="add_event_hint_date">31 декабря 1999</string>
    <string name="add_event_text_year">Я не помню год</string>

    <string name="event_details_text_edit">Редактирование</string>
    <string name="event_details_text_notes">Заметки</string>
    <string name="event_details_hint_notes">Введите заметки</string>
    <string name="event_details_text_name">Имя</string>
    <string name="event_details_hint_name">Введите имя</string>
    <string name="event_details_text_lastname">Фамилия</string>
    <string name="event_details_hint_lastname">Введите фамилию</string>
    <string name="event_details_text_middle_name">Отчество</string>
    <string name="event_details_hint_middle_name">Введите отчество</string>
    <string name="event_details_text_date">Дата</string>
    <string name="event_details_hint_date">31 декабря 1999</string>
    <string name="event_details_text_year">Я не помню год</string>
    <string name="event_details_text_delete">Удалить</string>
    <string name="event_details_text_save">Сохранить</string>

    <string name="calendar_text_no_saved_dates">Нет сохраненных дат</string>
    <string name="calendar_date">%d %s</string>

    <string name="settings_general">Основные</string>
    <string name="settings_language">Язык</string>
    <string name="settings_language_ru">Русский</string>
    <string name="settings_language_en">Английский</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_theme_light">Светлая тема</string>
    <string name="settings_theme_dark">Темная тема</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_notifications_all">Присылать уведомления</string>
    <string name="settings_notifications_time">Время уведомлений</string>
    <string name="settings_notifications_time_value">11:00</string>
    <string name="settings_notifications_month">Уведомлять о событиях месяца в первый день месяца</string>
    <string name="settings_notifications_week">Уведомлять о событиях за неделю</string>
    <string name="settings_notifications_three_day">Уведомлять о событиях за 3 дня</string>
    <string name="settings_notifications_two_day">Уведомлять о событиях за 2 дня</string>
    <string name="settings_notifications_day">Уведомлять о событиях за день</string>
    <string name="settings_notifications_today">Уведомлять о событиях утром</string>
    <string name="settings_restart_notifications">Перезапустить ежедневные уведомления и обновления событий</string>
    <string name="settings_backup">Резервные копии</string>
    <string name="settings_backup_import">Импорт событий</string>
    <string name="settings_backup_export">Экспорт событий</string>
</resources>