<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_small">

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="@dimen/icon_size_very_large"
            android:layout_height="@dimen/icon_size_very_large"
            android:src="@drawable/placeholder_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_full_name"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/image_photo"
            tools:text="Михалец Евгений" />

        <TextView
            android:id="@+id/text_info"
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/text_full_name"
            tools:text="День рождения 21 августа" />

        <TextView
            android:id="@+id/text_days_left"
            style="@style/Text.Highlighted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/text_age"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_info"
            tools:text="Через 5 дней" />

        <TextView
            android:id="@+id/text_age"
            style="@style/Text.Highlighted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            app:layout_constraintBottom_toBottomOf="@id/text_days_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_days_left"
            app:layout_constraintTop_toTopOf="@id/text_days_left"
            tools:text="(57 лет)" />

        <TextView
            android:id="@+id/text_notes_label"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/event_details_text_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_days_left" />

        <EditText
            android:id="@+id/input_notes"
            style="@style/Input.Notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_very_small"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/event_details_hint_notes"
            app:layout_constraintTop_toBottomOf="@+id/text_notes_label"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/text_edit"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/event_details_text_edit"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/input_notes" />

        <TextView
            android:id="@+id/text_name"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/event_details_text_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_edit" />

        <EditText
            android:id="@+id/input_name"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_very_small"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/event_details_hint_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/text_lastname"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/event_details_text_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name" />

        <EditText
            android:id="@+id/input_lastname"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_very_small"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/event_details_hint_lastname"
            app:layout_constraintTop_toBottomOf="@+id/text_lastname"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/text_middle_name"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/event_details_text_middle_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_lastname" />

        <EditText
            android:id="@+id/input_middle_name"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_very_small"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/event_details_hint_middle_name"
            app:layout_constraintTop_toBottomOf="@+id/text_middle_name"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/text_date"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/event_details_text_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_middle_name" />

        <EditText
            android:id="@+id/input_date"
            style="@style/Input.Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_very_small"
            android:hint="@string/event_details_hint_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_date"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/check_year"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/add_event_text_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_date" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Button.Negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/event_details_text_delete"
            app:icon="@drawable/ic_delete"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_year" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Button.Positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:enabled="false"
            android:text="@string/event_details_text_save"
            app:icon="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@+id/check_year" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>