<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:padding="@dimen/space_small"
                android:text="@string/settings_general" />

            <LinearLayout
                android:id="@+id/lay_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="@dimen/space_small"
                android:paddingEnd="16dp"
                android:paddingBottom="@dimen/space_small">

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/settings_language" />

                <TextView
                    android:id="@+id/text_language"
                    style="@style/TextPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry"
                    tools:text="Русский" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_language_ru"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/settings_language_ru"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_language_en"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/settings_language_en"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/lay_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="@dimen/space_small"
                android:paddingEnd="16dp"
                android:paddingBottom="@dimen/space_small">

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/settings_theme" />

                <TextView
                    android:id="@+id/text_theme"
                    style="@style/TextPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry"
                    tools:text="Светлая тема" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_theme_light"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/space_normal"
                android:paddingBottom="16dp"
                android:text="@string/settings_theme_light"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_theme_dark"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/space_normal"
                android:paddingBottom="16dp"
                android:text="@string/settings_theme_dark"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>