<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:padding="@dimen/space_small"
                android:text="@string/settings_backup" />

            <TextView
                android:id="@+id/text_import"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/space_normal"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/space_normal"
                android:paddingBottom="16dp"
                android:text="@string/settings_backup_import" />

            <TextView
                android:id="@+id/text_export"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/space_normal"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/space_normal"
                android:paddingBottom="16dp"
                android:text="@string/settings_backup_export" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>